# bioquery-py

./: .gitignore  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  CLAUDE.md  CODEOWNERS  GEMINI.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: add-to-project.yml  ci.yml  release.yml
examples/: basic_usage.py
src/bioquery/: __init__.py  client.py  exceptions.py  models.py
src/bioquery_agents/: __init__.py  checkpoint.py  graph.py  middleware.py  planning.py  retry.py  subgraph.py
src/bioquery_agents/consultants/: __init__.py  base.py  definitions.py  orchestrator.py  schemas.py  tool.py
tests/: __init__.py  test_checkpoint.py  test_client.py  test_consultants.py  test_graph.py  test_middleware.py  test_models.py  test_planning.py  test_retry.py  test_subgraph.py
