[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bioquery-agents"
version = "0.1.0"
description = "Lightweight graph-based agent orchestration for Python. Inspired by LangGraph and deepagents."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Alex V. Nesta", email = "hello@bioquery.io" },
]
keywords = [
    "agents",
    "orchestration",
    "state-graph",
    "llm",
    "ai",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
    "pandas>=2.0",
    "plotly>=5.0",
]

[project.optional-dependencies]
consultants = [
    "anthropic>=0.40.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=4.0",
    "mypy>=1.8",
    "ruff>=0.4",
    "anthropic>=0.40.0",  # For type checking consultants
]

[project.urls]
Homepage = "https://github.com/BioQuery-io/bioquery-agents"
Documentation = "https://github.com/BioQuery-io/bioquery-agents#readme"
Repository = "https://github.com/BioQuery-io/bioquery-agents"
Issues = "https://github.com/BioQuery-io/bioquery-agents/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/bioquery_agents"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # Line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["bioquery_agents"]
